# parallel_image_processing

./: gitignore
ex1/: CMakeLists.txt  README.md  ex1.cpp
ex2/: CMakeLists.txt  README.md  ex2.cpp
ex3/: CMakeLists.txt  README.md  equation.cpp  ex3.cpp
ex4/: CMakeLists.txt  README.md  ex4.cpp
ex5/: README.md  ex5.cpp
ex6/: CMakeLists.txt  README.md  SSE_MeanFilter_upload_c++.cpp  SSE_Practice_upload.cpp
ex7/: CMakeLists.txt  README.md  ex7.cpp  ex7.cu  ex7.h  kernel.cu
ex8/: CMakeLists.txt  README.md  ex8.cpp  ex8.h  kernel.cu
ex9/: CMakeLists.txt  Device.cl  README.md  ex9.cpp
hw1/: .gitignore  CMakeLists.txt  README.md
hw1/image/: hw1_1.ppm
hw1/src/: BlobDetection.h  Histogram.h  SaltandPepper.h  hw1.cpp
hw2/: .gitignore  CMakeLists.txt  README.md
hw2/src/: hw2.cpp  myIPP.h  myOpenCV.h
hw3/: README.md
hw3/src/: MyFilter.h
hw4/: CMakeLists.txt  README.md
hw4/dnn/: yolov3.cfg
hw4/src/: Display.h  MyInterpolation.h  hw3.cpp  hw4.cpp
hw5/: CMakeLists.txt  README.md
hw5/src/: Detection.h  SSEMean.h  SSETest.h  SerialMean.h  final_sse_code.cpp  hw5.cpp
hw6/: CMakeLists.txt  README.md
hw6/src/: HW5Mean.h  HW6Mean.h  hw6.cpp
hw7/: CMakeLists.txt  README.md
hw7/src/: hw7.cpp  kernel.cu  myCUDA.cpp  myCUDA.h  myIPP.cpp  myOpenCV.cpp  myOpenMP.cpp  mySerial.cpp
hw8/: CMakeLists.txt  README.md
hw8/src/: hw8.cpp  kernel.cu  myCUDA.cpp  myCUDA.h
project1/: CMakeLists.txt  README.md
project1/src/: OMPInterpolation.h  SerialInterpolation.h  interpolation_omp.cpp  p1.cpp
